--- a/pages/1742.html
+++ b/pages/1742.html
@@ -655,15 +655,15 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>C, D</annotation></semantics></math> be two <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, or, generally, two <a class='existingWikiWord' href='/nlab/show/object'>objects</a> of a give <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>C, D</annotation></semantics></math> be two <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, or, generally, two <a class='existingWikiWord' href='/nlab/show/object'>objects</a> of a give <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>L: C \to D</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>R : D \to C</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> between these, or generally <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> in the ambient <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>L: C \to D</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>R : D \to C</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> between these, or generally <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> in the ambient <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi><mo>:</mo><msub><mi>id</mi> <mi>C</mi></msub><mo>⇒</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>\eta: id_C \Rightarrow R \circ L</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi><mo>:</mo><mi>L</mi><mo>∘</mo><mi>R</mi><mo>⇒</mo><msub><mi>id</mi> <mi>D</mi></msub></mrow><annotation encoding='application/x-tex'>\epsilon: L \circ R \Rightarrow id_D</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformations</a> or, generally <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a>.</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi><mo>:</mo><msub><mi>id</mi> <mi>C</mi></msub><mo>⇒</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>\eta: id_C \Rightarrow R \circ L</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi><mo>:</mo><mi>L</mi><mo>∘</mo><mi>R</mi><mo>⇒</mo><msub><mi>id</mi> <mi>D</mi></msub></mrow><annotation encoding='application/x-tex'>\epsilon: L \circ R \Rightarrow id_D</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformations</a> or, generally <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a>.</p>
 </li>
 </ol>
 
@@ -683,18 +683,18 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
 <h3 id='AsEquations'>As equations</h3>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_08844e144b48d831595fb986227e17c25721c97e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mover><mo>→</mo><mrow><mi>L</mi><mi>η</mi></mrow></mover><mi>L</mi><mi>R</mi><mi>L</mi><mover><mo>→</mo><mrow><mi>ϵ</mi><mi>L</mi></mrow></mover><mi>L</mi></mrow><annotation encoding='application/x-tex'> L \stackrel{L\eta}\to L R L\stackrel{\epsilon L}\to L </annotation></semantics></math></div>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mover><mo>→</mo><mrow><mi>L</mi><mi>η</mi></mrow></mover><mi>L</mi><mi>R</mi><mi>L</mi><mover><mo>→</mo><mrow><mi>ϵ</mi><mi>L</mi></mrow></mover><mi>L</mi></mrow><annotation encoding='application/x-tex'> L \stackrel{L\eta}\to L R L\stackrel{\epsilon L}\to L </annotation></semantics></math></div>
 <p>and</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_08844e144b48d831595fb986227e17c25721c97e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mover><mo>→</mo><mrow><mi>η</mi><mi>R</mi></mrow></mover><mi>R</mi><mi>L</mi><mi>R</mi><mover><mo>→</mo><mrow><mi>R</mi><mi>ϵ</mi></mrow></mover><mi>R</mi></mrow><annotation encoding='application/x-tex'> R\stackrel{\eta R}\to R L R \stackrel{R\epsilon}\to R </annotation></semantics></math></div>
-<p>are identities. (Here, the composition of the <math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>- with the <math class='maruku-mathml' display='inline' id='mathml_08844e144b48d831595fb986227e17c25721c97e_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-morphisms is sometimes called <a class='existingWikiWord' href='/nlab/show/whiskering'>whiskering</a>.)</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mover><mo>→</mo><mrow><mi>η</mi><mi>R</mi></mrow></mover><mi>R</mi><mi>L</mi><mi>R</mi><mover><mo>→</mo><mrow><mi>R</mi><mi>ϵ</mi></mrow></mover><mi>R</mi></mrow><annotation encoding='application/x-tex'> R\stackrel{\eta R}\to R L R \stackrel{R\epsilon}\to R </annotation></semantics></math></div>
+<p>are identities. (Here, the composition of the <math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>- with the <math class='maruku-mathml' display='inline' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-morphisms is sometimes called <a class='existingWikiWord' href='/nlab/show/whiskering'>whiskering</a>.)</p>
 
 <h3 id='AsDiagrams'>As diagrams</h3>
 
 <p>As <a class='existingWikiWord' href='/nlab/show/diagram'>diagrams</a> in the ambient <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>, the triangle identities look as follows</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_08844e144b48d831595fb986227e17c25721c97e_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϵ</mi><mi>L</mi><mo>.</mo><mi>L</mi><mi>η</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>id</mi> <mi>L</mi></msub></mtd></mtr> <mtr><mtd><mrow><mtable columnspacing='0' rowspacing='0'><mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mn>1</mn> <mi>C</mi></msub></mtd> <mtd></mtd></mtr> <mtr><mtd columnspan='5'><semantics><annotation-xml encoding='SVG1.1'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_425bc063b0a6e61792de22a2e2c8ff3710d4d591_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϵ</mi><mi>L</mi><mo>.</mo><mi>L</mi><mi>η</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>id</mi> <mi>L</mi></msub></mtd></mtr> <mtr><mtd><mrow><mtable columnspacing='0' rowspacing='0'><mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mn>1</mn> <mi>C</mi></msub></mtd> <mtd></mtd></mtr> <mtr><mtd columnspan='5'><semantics><annotation-xml encoding='SVG1.1'>
        <svg height='2em' viewBox='0 0 85 20' width='8.5em' xmlns='http://www.w3.org/2000/svg'>
           <defs>
             <marker id='svg195arrowhead' markerHeight='5' markerUnits='strokeWidth' markerWidth='8' orient='auto' refX='0' refY='5' viewBox='0 0 10 10'>
@@ -803,18 +803,19 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>or, equivalently, like so:</p>
 <center>
-<img src='https://ncatlab.org/nlab/files/Adjunction.jpg' width='540'/>
+<img src='https://ncatlab.org/nlab/files/Adjointness.jpg' width='540'/>
 </center>
 <h3 id='AsStringDiagrams'>As string diagrams</h3>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/string+diagram'>string diagrams</a>, the identities appear as the action of “pulling zigzags straight” (hence the name):</p>
-
-<p><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/>, <img alt='' src='/nlab/files/adjunction-down-string.png'/>.</p>
-
+<p>As <a class='existingWikiWord' href='/nlab/show/string+diagram'>string diagrams</a>, the triangle identities appear as the action of “pulling zigzags straight” (hence the name):</p>
+<center>
+ <img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/>,<img alt='' src='/nlab/files/adjunction-down-string.png'/>.
+</center>
 <p>With labels left implicit, this notation becomes very economical:</p>
-
-<p><img alt='Minimal string diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string-minimal.png'/>, <img alt='Minimal string diagram of second zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-down-string-minimal.png'/>.</p>
-
+<center>
+ <img alt='Minimal string diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string-minimal.png'/>, 
+ <img alt='Minimal string diagram of second zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-down-string-minimal.png'/>.
+</center>
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -863,14 +864,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 24, 2018 at 16:38:35.
+  Last revised on June 25, 2018 at 06:56:01.
   See the <a href="https://ncatlab.org/nlab/history/triangle identities" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/triangle+identities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/triangle+identities/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/triangle+identities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/triangle+identities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/triangle+identities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/triangle+identities/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/triangle+identities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/triangle+identities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/triangle identities/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
