--- a/pages/4312.html
+++ b/pages/4312.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -433,7 +432,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+cohomology'>etale cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+cohomology'>etale cohomology</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/group+of+units'>group of units</a>, <a class='existingWikiWord' href='/nlab/show/Picard+group'>Picard group</a>, <a class='existingWikiWord' href='/nlab/show/Brauer+group'>Brauer group</a></li>
@@ -527,7 +526,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+cohomology'>Čech cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+cohomology'>?ech cohomology</a></p>
 </li>
 
 <li>
@@ -669,7 +668,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/de+Rham+theorem'>de Rham theorem</a>, <a class='existingWikiWord' href='/nlab/show/Poincare+lemma'>Poincare lemma</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+theorem'>Stokes theorem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/de+Rham+theorem'>de Rham theorem</a>, <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+lemma'>Poincare lemma</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+theorem'>Stokes theorem</a></p>
 </li>
 
 <li>
@@ -788,7 +787,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#relation_to_dolbeault_cohomology'>Relation to Dolbeault cohomology</a></li><li><a href='#relation_to_hodge_theory'>Relation to Hodge theory</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/differential+form'>differential form</a> <math class='maruku-mathml' display='inline' id='mathml_0caf6864f0c475ffdfb678fb78758ce19f0b511f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi><mo>∈</mo><msup><mi>Ω</mi> <mi>n</mi></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\omega \in \Omega^n(X)</annotation></semantics></math> on a <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> <math class='maruku-mathml' display='inline' id='mathml_0caf6864f0c475ffdfb678fb78758ce19f0b511f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> is called a <strong>harmonic fom</strong> if it is in the <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> of the <a class='existingWikiWord' href='/nlab/show/Laplace+operator'>Laplace operator</a> <math class='maruku-mathml' display='inline' id='mathml_0caf6864f0c475ffdfb678fb78758ce19f0b511f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_g</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_0caf6864f0c475ffdfb678fb78758ce19f0b511f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> in that <math class='maruku-mathml' display='inline' id='mathml_0caf6864f0c475ffdfb678fb78758ce19f0b511f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Δ</mi><mi>ω</mi><mo>=</mo><mo stretchy='false'>(</mo><mi>d</mi><mo>+</mo><msup><mi>d</mi> <mo>†</mo></msup><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mi>ω</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\Delta \omega = (d + d^\dagger)^2 \omega = 0</annotation></semantics></math>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/differential+form'>differential form</a> <math class='maruku-mathml' display='inline' id='mathml_68c5573b61eb0aa6b1432b14fb13d9d14e694f74_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi><mo>∈</mo><msup><mi>Ω</mi> <mi>n</mi></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\omega \in \Omega^n(X)</annotation></semantics></math> on a <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> <math class='maruku-mathml' display='inline' id='mathml_68c5573b61eb0aa6b1432b14fb13d9d14e694f74_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> is called a <strong>harmonic form</strong> if it is in the <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> of the <a class='existingWikiWord' href='/nlab/show/Laplace+operator'>Laplace operator</a> <math class='maruku-mathml' display='inline' id='mathml_68c5573b61eb0aa6b1432b14fb13d9d14e694f74_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_g</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_68c5573b61eb0aa6b1432b14fb13d9d14e694f74_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> in that <math class='maruku-mathml' display='inline' id='mathml_68c5573b61eb0aa6b1432b14fb13d9d14e694f74_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Δ</mi><mi>ω</mi><mo>=</mo><mo stretchy='false'>(</mo><mi>d</mi><mo>+</mo><msup><mi>d</mi> <mo>†</mo></msup><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mi>ω</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\Delta \omega = (d + d^\dagger)^2 \omega = 0</annotation></semantics></math>.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -821,19 +820,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  5, 2014 04:16:26 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.68.97.89)
+  <p>
+  Last revised on June 25, 2018 at 12:49:32.
+  See the <a href="https://ncatlab.org/nlab/history/harmonic differential form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/harmonic+differential+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+differential+form/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/harmonic+differential+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+differential+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/harmonic+differential+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+differential+form/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/harmonic+differential+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+differential+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/harmonic differential form/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/harmonic+differential+form" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/harmonic+differential+form" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/harmonic+differential+form" id="view_source" rel="nofollow">Source</a>
