--- a/pages/3464.html
+++ b/pages/3464.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3652/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -490,11 +489,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dusko+Pavlovic'>Duško Pavlović</a>, <em>Categorical interpolation: descent and the <a class='existingWikiWord' href='/nlab/show/Beck-Chevalley+condition'>Beck-Chevalley condition</a> without direct images</em>, 306–325 (<math class='maruku-mathml' display='inline' id='mathml_e3751c82cc7455ff28119cdd8e4b0c87c83d52ec_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab remark: important clarification of the subject from logics point of view).</p>
+<p><a class='existingWikiWord' href='/nlab/show/Dusko+Pavlovic'>Duško Pavlović</a>, <em>Categorical interpolation: descent and the <a class='existingWikiWord' href='/nlab/show/Beck-Chevalley+condition'>Beck-Chevalley condition</a> without direct images</em>, 306–325 (<math class='maruku-mathml' display='inline' id='mathml_64f3e2ab0bc7d9597f18b26892cbeb56cecf7c03_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab remark: important clarification of the subject from logics point of view).</p>
 </li>
 
 <li>
-<p>A. J. Power, <em>An <math class='maruku-mathml' display='inline' id='mathml_e3751c82cc7455ff28119cdd8e4b0c87c83d52ec_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-categorical pasting theorem</em>, 326–58</p>
+<p>A. J. Power, <em>An <math class='maruku-mathml' display='inline' id='mathml_64f3e2ab0bc7d9597f18b26892cbeb56cecf7c03_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-categorical pasting theorem</em>, 326–58</p>
 
 <p>(on <a class='existingWikiWord' href='/nlab/show/pasting+diagram'>pasting</a> in <a class='existingWikiWord' href='/nlab/show/n-category'>n-categories</a>).</p>
 </li>
@@ -528,23 +527,26 @@ margin-left: 0em;
 
 <p>About the geographic place see wikipedia: <a href='http://en.wikipedia.org/wiki/Como'>Como</a> and the conference centre : <a href='http://en.wikipedia.org/wiki/Villa_Olmo'>Villa Olmo</a>.</p>
 
+<p>In 2018, a <a href='http://tcsc.lakecomoschool.org/'>school and conference</a> on topos theory was hosted in Como.</p>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on September  4, 2015 18:26:02 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.82.63.197)
+  <p>
+  Last revised on June 25, 2018 at 16:53:56.
+  See the <a href="https://ncatlab.org/nlab/history/Como" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Como" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Como/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Como" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Como" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Como" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Como/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Como" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Como" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Como/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Como" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Como" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Como" id="view_source" rel="nofollow">Source</a>
